--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ footer {
 
     filter: blur(8px);
     -webkit-filter: blur(3px);
-
+    
     background-size: cover; 
     background-position: center; 
     margin: -8px; 
@@ -24,10 +24,9 @@ footer {
 
 .myDiv {
     background-color:#ede8f1;
-    margin: -8px;
     padding: 20px;
     max-width: 100%;  
-    height: auto;
+    height: 189px;
 }
 
 .sidebar {
@@ -98,7 +97,7 @@ footer {
     .sidebar a {font-size: 18px;}
 }
 
-h1 {text-align: center; position: absolute;}
+
 h2 {text-align: center;}
 h3 {text-align: center;}
 p {text-align: center;}
