Fixed a visual bug in the sidebar's toggleable options

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ main {
 .btn-toggle:hover,
 .btn-toggle:focus {
   color: rgba(0, 0, 0, .85);
-  background-color: #d2f4ea;
+  background-color: #064c5e;
 }
 
 .btn-toggle::before {
